tests/linput.err
20 LINE INPUT A
               ^
Error: string variable or array element expected: A
