tests/linput.bas
10 REM STRING VARIABLE REQUIRED
20 LINE INPUT A
